@@ -74,9 +74,15 @@ public class MainTest extends TestCase {
     final ProofreadingResult paRes = prog.doProofreading("1", testString, caLoc, 0, testString.length(), prop);
     assertEquals("1", paRes.aDocumentIdentifier);
     //assertEquals(1, paRes.aErrors.length);
-
   }
 
-  
+  public void testCleanFootnotes() {
+    final Main prog = new Main(null);
+    assertEquals("A house.¹ Here comes more text.", prog.cleanFootnotes("A house.1 Here comes more text."));
+    assertEquals("A house.1234 Here comes more text.", prog.cleanFootnotes("A house.1234 Here comes more text."));  // too many digits for a footnote
+    String input    = "Das Haus.1 Hier kommt mehr Text2. Und nochmal!3 Und schon wieder ein Satz?4 Jetzt ist aber Schluss.";
+    String expected = "Das Haus.¹ Hier kommt mehr Text2. Und nochmal!¹ Und schon wieder ein Satz?¹ Jetzt ist aber Schluss.";
+    assertEquals(expected, prog.cleanFootnotes(input));
+  }
 
 }
