@@ -40,6 +40,10 @@ LanguageTool Change Log
 	org.languagetool.dev.DictionaryExporter
 	org.languagetool.dev.POSDictionaryBuilder
 
+-LibreOffice/OpenOffice integration:
+	-added a workaround for incorrect sentence detection for the case that a
+		footnote appeared after a sentence full stop (Sourceforge bug #191) 
+
 -API:
 	-SentenceTokenizer is now an interface, the implementation has been moved to
 		RegexSentenceTokenizer, but this is deprecated and SRXSentenceTokenizer
